Modificaciones finales responsive

--- a/style.css
+++ b/style.css
@@ -673,7 +673,7 @@ span:after {
     }
 
     img.personaje {
-        width: 310px;
+        width: 285px;
         padding-top: 7%;
     }
     .contenido-icons-modal {
@@ -784,7 +784,7 @@ span:after {
 
 
     img.personaje {
-        width: 338px!important
+        width: 315px!important;
     }
     .contenido-personaje-texto {
         bottom: 100px!important
