--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -11,7 +11,7 @@
   --pink: #e83e8c;
   --red: #dc3545;
   --orange: #fd7e14;
-  --yellow: #ffc107;
+  --yellow: #ffa502;
   --green: #28a745;
   --teal: #20c997;
   --cyan: #17a2b8;
@@ -22,7 +22,7 @@
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
-  --warning: #ffc107;
+  --warning: #ffa502;
   --danger: #dc3545;
   --light: #f8f9fa;
   --dark: #343a40;
@@ -80,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 0rem;
 }
 
 abbr[title],
@@ -407,7 +407,6 @@ h6, .h6 {
 }
 
 .display-3 {
-  font-size: 4.5rem;
   font-weight: 300;
   line-height: 1.2;
 }
@@ -592,7 +591,7 @@ pre code {
   flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
-  height: 100vh;
+  /*height: 100vh;*/
 }
 
 .no-gutters {
@@ -1100,7 +1099,7 @@ pre code {
   }
 
   a:focus, a:hover {
-    color: #000000 !important;
+    color: #c0392b !important;
     text-decoration: underline;
   }
 
@@ -2570,8 +2569,8 @@ fieldset:disabled a.btn {
 
 .btn-warning {
   color: #212529;
-  background-color: #ffc107;
-  border-color: #ffc107;
+  background-color: #ffa502;
+  border-color: #ffa502;
 }
 
 .btn-warning:hover {
@@ -2586,8 +2585,8 @@ fieldset:disabled a.btn {
 
 .btn-warning.disabled, .btn-warning:disabled {
   color: #212529;
-  background-color: #ffc107;
-  border-color: #ffc107;
+  background-color: #ffa502;
+  border-color: #ffa502;
 }
 
 .btn-warning:not(:disabled):not(.disabled):active, .btn-warning:not(:disabled):not(.disabled).active,
@@ -2833,14 +2832,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-warning {
-  color: #ffc107;
-  border-color: #ffc107;
+  color: #ffa502;
+  border-color: #ffa502;
 }
 
 .btn-outline-warning:hover {
   color: #212529;
-  background-color: #ffc107;
-  border-color: #ffc107;
+  background-color: #ffa502;
+  border-color: #ffa502;
 }
 
 .btn-outline-warning:focus, .btn-outline-warning.focus {
@@ -2848,15 +2847,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-warning.disabled, .btn-outline-warning:disabled {
-  color: #ffc107;
+  color: #ffa502;
   background-color: transparent;
 }
 
 .btn-outline-warning:not(:disabled):not(.disabled):active, .btn-outline-warning:not(:disabled):not(.disabled).active,
 .show > .btn-outline-warning.dropdown-toggle {
   color: #212529;
-  background-color: #ffc107;
-  border-color: #ffc107;
+  background-color: #ffa502;
+  border-color: #ffa502;
 }
 
 .btn-outline-warning:not(:disabled):not(.disabled):active:focus, .btn-outline-warning:not(:disabled):not(.disabled).active:focus,
@@ -4572,8 +4571,13 @@ input[type="button"].btn-block {
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 2px solid #ffa502;
   border-radius: 0.25rem;
+  
+}
+.card:hover{
+      box-shadow: 2px 1px 8px 0px rgba(255, 165, 2, 0.29);
+
 }
 
 .card > hr {
@@ -4942,7 +4946,6 @@ input[type="button"].btn-block {
   display: inline-block;
   padding: 0.25em 0.4em;
   font-size: 75%;
-  font-weight: 700;
   line-height: 1;
   text-align: center;
   white-space: nowrap;
@@ -5038,7 +5041,7 @@ a.badge-info:focus, a.badge-info.focus {
 
 .badge-warning {
   color: #212529;
-  background-color: #ffc107;
+  background-color: #ffa502;
 }
 
 a.badge-warning:hover, a.badge-warning:focus {
@@ -6561,7 +6564,7 @@ button.bg-info:focus {
 }
 
 .bg-warning {
-  background-color: #ffc107 !important;
+  background-color: #ffa502 !important;
 }
 
 a.bg-warning:hover, a.bg-warning:focus,
@@ -6665,7 +6668,7 @@ button.bg-dark:focus {
 }
 
 .border-warning {
-  border-color: #ffc107 !important;
+  border-color: #ffa502 !important;
 }
 
 .border-danger {
@@ -9894,7 +9897,7 @@ a.text-info:hover, a.text-info:focus {
 }
 
 .text-warning {
-  color: #ffc107 !important;
+  color: #ffa502 !important;
 }
 
 a.text-warning:hover, a.text-warning:focus {
