--- a/style.css
+++ b/style.css
@@ -1,6 +1,81 @@
+.mix {
+  display: none;
+}
 
+
+::placeholder { color: #ffa502; }
+
+.contenido-srch input {
+    width: 100%;
+    padding: .5em;
+    border: 1px solid #ffa502;
+    border-radius: 4px;
+}
+
+
+.contenido-btn button {
+    background: black;
+    border: 2px solid black;
+    color: white;
+    padding: 0.5rem 1.6rem;
+    border-radius: 4px;
+    transition: .3s ease-out;
+}
+
+.contenido-btn button:hover{
+    border:2px solid #ffa502;
+    background: none;
+    color: #ffa502;
+    transition: .3s ease-out;
+}
+
+input {
+  padding: .5em;
+}
+
+.title {
+  font-weight: 2em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer{
+    background: #ffa502;
+}
+
+
+.footer-copyright.text-center.py-3 {
+    color: black;
+}
+
+
+.mt-5.text-center .icon-redes {
+    width: 37px;
+}
+
+
+
+
+
+.row {
+    height: 100%;
+        width: 100%;
+}
 a.enlace-regreso {
-    color: red;
+        color: #e74c3c;
     text-decoration: none;
 }
 
@@ -11,10 +86,6 @@ a.enlace-regreso {
     justify-content: center;
     margin: auto !important;
     height: 100%;
-}
-
-.card.mb-4.box-shadow:hover{
-    background: #ffa502;
 }
 
 
@@ -657,7 +728,7 @@ span:after {
         display: grid;
         width: 100%;
         height: 100vh;
-        padding-top: 330px;
+        padding-top:80px;
         padding-bottom: 50px
     }
     .contenido-personaje {
@@ -669,11 +740,11 @@ span:after {
     
     div#wrap h3 {
     color: black;
-    font-size: 30px;
+    font-size: 25px;
     }
 
     img.personaje {
-        width: 310px;
+        width: 220px;
         padding-top: 7%;
     }
     .contenido-icons-modal {
@@ -699,7 +770,7 @@ span:after {
     }
     .color-amarillo {
         color: #ffa502;
-        font-size: 20px;
+        font-size: 16px;
     }
 
     figcaption.figure-caption.text-right h5 {
@@ -757,6 +828,11 @@ span:after {
     .col-sm-12.col-12.contenido-llamada-responsive {
         display: none
     }
+
+    img.personaje {
+    width: 300px!important;
+    padding-top: 110px !important;
+    }
 }
 
 /*-------------------------------------------------------*/
@@ -772,7 +848,11 @@ span:after {
 /*Responsive pc mediana*/
 
 @media (max-width:1024px) and (min-width:766px) {
- 
+ img.personaje {
+    width: 300px!important;
+    padding-top: 110px !important;
+    }
+
     a.descargar-cv {
     font-size: 18px;
     padding: 10px 30px;
@@ -782,10 +862,6 @@ span:after {
     transition: all .5s ease-out;
     }
 
-
-    img.personaje {
-        width: 338px!important
-    }
     .contenido-personaje-texto {
         bottom: 100px!important
     }
@@ -947,12 +1023,19 @@ span:after {
 
 /*Responsive tableta*/
 @media (max-width:767px) and (min-width:360px) {
+
+
+    .col-xl-6.col-lg-6.col-md-6.col-sm-12.col-12.contenido-btn.pt-3.pb-3 {
+    text-align: center;
+    }
+
+
       .col-xl-9.col-lg-9.col-md-10.col-sm-12.col-12.pl-0.pr-0.d-xl-none.d-lg-none.d-md-none.d-sm-block.d-block.header {
         height: 8%;
     }
 
     img.personaje {
-    width: 255px!important;
+            width: 260px!important;
     }
 
     .col-sm-12.col-12.contenido-llamada-responsive.pl-0.pr-0 {
@@ -1101,7 +1184,7 @@ span:after {
     }
     .contenido-personaje-texto h3 {
 
-        font-size: 25px
+        font-size: 20px;
         color:black;
     }
     .contenido-personaje-texto h5 {
@@ -1159,6 +1242,13 @@ span:after {
 
 /*Responsive celular*/
 @media screen and (max-width:360px){
+
+    .col-xl-6.col-lg-6.col-md-6.col-sm-12.col-12.contenido-btn.pt-3.pb-3 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
     .col-xl-9.col-lg-9.col-md-10.col-sm-12.col-12.pl-0.pr-0.d-xl-none.d-lg-none.d-md-none.d-sm-block.d-block.header {
         height: 70px
     }
@@ -1286,7 +1376,7 @@ span:after {
     }
 
     img.personaje {
-    width: 84%;
+    width: 60%;
     }
 
     .contenido-llamada {
@@ -1395,6 +1485,13 @@ span:after {
 
 
 @media (max-width:360px) and (max-height: 640px){
+
+
+    .col-xl-6.col-lg-6.col-md-6.col-sm-12.col-12.contenido-btn.pt-3.pb-3 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
     .col-xl-9.col-lg-9.col-md-10.col-sm-12.col-12.pl-0.pr-0.d-xl-none.d-lg-none.d-md-none.d-sm-block.d-block.header {
         width: 100%;
