--- a/style.css
+++ b/style.css
@@ -842,6 +842,41 @@ span:after {
 
 
 
+@media only screen and (max-height: 700px){
+body{
+background: red !important; 
+}
+
+.contenido-personaje img.personaje {
+    width: 195px!important;
+    padding-top: 60px !important;
+}
+}
+
+@media only screen and (max-height: 700px){
+body{
+background: yellow !important; 
+}
+
+.contenido-personaje img.personaje {
+    width: 140px!important;
+    padding-top: 60px !important;
+}
+}
+
+
+@media (min-width: 765px) and (max-height: 700px){
+body{
+background: blue !important; 
+}
+
+.contenido-personaje img.personaje {
+    width: 195px!important;
+    padding-top: 60px !important;
+}
+}
+
+
 
 
 
