--- a/style.css
+++ b/style.css
@@ -1,88 +1,65 @@
-.cc-window {
-  opacity: 1;
-  transition: opacity 1s ease
+.cookie-wrapper {
+  display: none;  
 }
-.cc-window.cc-invisible { opacity: 0 }
-.cc-animate.cc-revoke { transition: transform 1s ease }
-.cc-animate.cc-revoke.cc-top { transform: translateY(-2em) }
-.cc-animate.cc-revoke.cc-bottom { transform: translateY(2em) }
-.cc-animate.cc-revoke.cc-active.cc-bottom, .cc-animate.cc-revoke.cc-active.cc-top, .cc-revoke:hover { transform: translateY(0) }
-.cc-grower {
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 1s
+
+.cookie-content {
+  text-align: center;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 20px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: #ffa502;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  z-index: 1010;
 }
-.cc-color-override--1680425298.cc-window {
-    background-color: #ffa502!important;
-  width:100%; 
+
+.cookie-text {
+  display: inline;
+  color: black;
+}
+
+.cookie-text-wrapper > .cookie-text > a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #545454;
+}
+
+.cookie-button {
+  display: inline-block;
+  padding: 10px 30px;
+  cursor: pointer;
+  color: black;
+  background-color: #ffa502;
+  border: 2px solid black;
+  border-radius: 3px;
+  font-size: 14px;
+  line-height: 18px;
+  transition: .3s ease;
+}
+
+.cookie-button:hover {
+  display: inline-block;
+  padding: 10px 80px;
+  cursor: pointer;
+  color: #ffa502;
+  background-color: #ffa502;
+  transition: .3s ease;
+
+}
+
+a#cookie_accept_btn {
     color: black !important;
 }
-.cc-banner.cc-bottom {
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-.cc-revoke, .cc-window {
-   box-sizing: border-box;
-    font-family: "Roboto",sans-serif;
-    font-size: 12px;
-    line-height: 1.5em;
-    overflow: hidden;
-    padding: 1em 0.3em;
-    position: fixed;
-    text-align: center;
-    z-index: 9999;
-}
 
-.cc-color-override--1680425298 .cc-link, .cc-color-override--1680425298 .cc-link:active, .cc-color-override--1680425298 .cc-link:visited {
-    color: #fff;
+a#cookie_accept_btn {
+    color: black !important;
 }
-.cc-link, .cc-revoke:hover {
-    text-decoration: underline;
-}
-.cc-btn {
-   background: black !important;
-   border: 2px solid black !important;
-   border-radius: 3px;
-   color: white !important;
-
-    border-color: transparent;
-    border-style: solid;
-    border-width: 2px;
-    display: block;
-    font-size: 0.9em;
-    font-weight: 700;
-    margin: 10px auto 0;
-    max-width: 5em;
-    padding: 0.4em 0.7em;
-    text-align: center;
-    white-space: nowrap;
-    transition: .3s ease;
-}
-
-.cc-btn:hover {
-   background: none !important;
-   border: 2px solid black !important;
-   border-radius: 3px;
-   color: black !important;
-
-    border-color: transparent;
-    border-style: solid;
-    border-width: 2px;
-    display: block;
-    font-size: 0.9em;
-    font-weight: 700;
-    margin: 10px auto 0;
-    max-width: 5em;
-    padding: 0.4em 0.7em;
-    text-align: center;
-    white-space: nowrap;
-    transition: .3s ease;
-}
-.cc-btn, .cc-close, .cc-link, .cc-revoke {
-    cursor: pointer;
-}
-
 
 
 
